--- a/css/styles.css
+++ b/css/styles.css
@@ -193,15 +193,16 @@ a {
     border: none; 
     min-width: 169px; 
     height: 56px;
-    gap: 10px; 
     border-radius: 4px;
-    background:#4D5AE5;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15); 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 .banner-button:hover,
 .banner-button:focus{
     background-color: #404BBF;
+}
+.banner-button-link{
+    color: #fff;
 }
 
 /*Скилы*/
@@ -506,12 +507,213 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 .social-links-items-link:focus { 
     background-color: #31d0aa;
 }
+.footer-email{
+     margin-left: 80px;
+}
+.footer-email-container-input{
+width: 264px;
+height: 40px;
+flex-shrink: 0;
+border-radius: 4px;
+border: 1px solid #FFF;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+background: transparent;
+}
+.footer-email-container-input::placeholder{
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left:16px;
+    padding-top: 8px;
+}
+.footer-conteiner-btn{
+    display: flex;
+    margin-left: 24px;
+    align-self: center;
+    padding-bottom: 7px;
+}
+.footer-email-btn{
+    display: inline-flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border-radius: 4px;
+    background: #4D5AE5;
+    color: #FFF;
+    width: 165px;
+    height: 40px;
+}
 
+/*модальное окно*/
+.container-popup{
+}
+.popup{
+    position:fixed;
+    top:0px;
+    left:0px;
+    width:100vw;
+    height:100vh;
+    background:rgba(46, 47, 66, 0.40);
+    opacity: 0;
+    visibility: hidden;
+}
+.popup:target{
+    opacity: 1;
+    visibility: visible;
+}
 
+.popup-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+}
 
+.popup-content{
+    background-color: #fff;
+    width: 408px;
+    height: 584px;
+    flex-shrink: 0;
+    padding: 24px;
+    border-radius: 4px;
+    border: 1px solid  rgba(46, 47, 66, 0.40);
+    
+}
+.form-title{
+    display: flex;
+    width: 360px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
+.form-lebel{
+    display: flex;
+    flex-direction: column;
+    color:#8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.7;
+    letter-spacing: 0.04em;
+    }
 
+.icon {
+}
+.popup-title {
+    color: #2E2F42;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 20px;
+    }
+.form-title-input{
+    width: 360px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    padding-left: 38px;
+}
 
-
+.form-title-input-name{
+    position: relative;
+}
+.icon-form-name{
+    position: absolute;
+    fill: #2E2F42;
+    top: 11px;
+    left:16px;
+}
+.icon-form-name:active {
+    fill: #4D5AE5;
+}
+.icon-form-tellemail{
+    position: absolute;
+    fill: #2E2F42;
+    top: 8px;
+    left:16px;
+}
+.form-title-input:focus{
+    outline: none;
+    border: 1px solid #4D5AE5;
+}
+.textarea{
+    color: rgba(46, 47, 66, 0.40);
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    height: 120px;
+    resize: none;
+    padding-top: 8px;
+    padding-left: 16px;
+}
+.form-lebel-checkbox{
+    color: #8E8F99;
+    font-size: 12px;
+    line-height:1.7;
+    letter-spacing: 0.04em;
+    padding: 12px 0 12px 0;
+}
+.formbtn{
+    display: inline-flex;
+    padding: 16px 32px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    background: #4D5AE5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+.form-lebel-link{
+    color: #4D5AE5;
+    text-decoration-line: underline;
+}
+.popup-content-close{
+    position: relative;
+    display: flex;
+    justify-content: left;
+    flex-shrink: 0;
+    margin-bottom: 20px;
+}
+.icon-close{
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    fill: black;
+}
+.icon-close:active{
+    fill:#E7E9FC;
+}
+.popup-content-close::before{
+    content: "";
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    transition-property: background-color;
+}
+.popup-content-close:active::before{
+    background-color:#404BBF;
+}
 
 
 
