--- a/css/styles.css
+++ b/css/styles.css
@@ -507,59 +507,73 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 .social-links-items-link:focus { 
     background-color: #31d0aa;
 }
-.footer-email{
-     margin-left: 80px;
+
+
+.footer-conteiner{
+    padding-left: 80px;
+}
+.footer-conteiner-p{
+    margin-bottom: 16px;
+    font-weight: 500; 
+    font-size: 16px;
+    letter-spacing: 0.02em; 
+    color: #ffffff;
+}
+.footer-email-container{
+    display: flex;
+    gap: 24px;
 }
 .footer-email-container-input{
-width: 264px;
-height: 40px;
-flex-shrink: 0;
-border-radius: 4px;
-border: 1px solid #FFF;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-background: transparent;
-}
-.footer-email-container-input::placeholder{
-    color: #FFF;
-    font-family: Roboto;
-    font-size: 12px;
-    font-weight: 400;
+    width: 264px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #FFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    background: transparent;
+    font-size: 12px; 
     line-height: 2;
     letter-spacing: 0.04em;
     padding-left:16px;
-    padding-top: 8px;
+    color: #ffffff;
 }
-.footer-conteiner-btn{
-    display: flex;
-    margin-left: 24px;
-    align-self: center;
-    padding-bottom: 7px;
-}
-.footer-email-btn{
-    display: inline-flex;
-    padding: 8px 24px;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    border-radius: 4px;
-    background: #4D5AE5;
-    color: #FFF;
-    width: 165px;
-    height: 40px;
+.footer-email-container-input::placeholder{
+    color: #ffffff;
 }
 
-/*модальное окно*/
-.container-popup{
+.footer-email-btn{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    gap: 16px;
+    border-radius: 4px;
+    background-color: #4D5AE5; 
+    color: #ffffff;
+    min-width: 165px;
+    height: 40px;
+    cursor: pointe;
+    border: none;
+    border-radius: 4px;
 }
+.icon-list{
+    fill: #FFF;
+}
+
+
+/*модальное окно*/
+
 .popup{
     position:fixed;
     top:0px;
     left:0px;
-    width:100vw;
-    height:100vh;
+    width: 100%;
+    height:100%;
     background:rgba(46, 47, 66, 0.40);
-    opacity: 0;
-    visibility: hidden;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .popup:target{
     opacity: 1;
@@ -567,21 +581,38 @@ background: transparent;
 }
 
 .popup-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px 0, 0.2; 
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
-
 .popup-content{
     background-color: #fff;
     width: 408px;
     height: 584px;
     flex-shrink: 0;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     border-radius: 4px;
-    border: 1px solid  rgba(46, 47, 66, 0.40);
-    
+    border: 1px solid  rgba(46, 47, 66, 0.40); 
+}
+.popup-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 16px;
+}
+.form-title-conteiner{
+    margin-bottom: 8px;
 }
 .form-title{
     display: flex;
@@ -598,10 +629,9 @@ background: transparent;
     font-weight: 400;
     line-height: 1.7;
     letter-spacing: 0.04em;
+    margin-bottom: 4px;
     }
 
-.icon {
-}
 .popup-title {
     color: #2E2F42;
     text-align: center;
@@ -611,66 +641,114 @@ background: transparent;
     letter-spacing: 0.02em;
     margin-bottom: 20px;
     }
-.form-title-input{
+
+    .form-title-input-name{
+    position: relative;
     width: 360px;
+
+}
+.form-title-input{
+    width: 100%;
     height: 40px;
     flex-shrink: 0;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     padding-left: 38px;
-}
-
-.form-title-input-name{
-    position: relative;
-}
-.icon-form-name{
-    position: absolute;
-    fill: #2E2F42;
-    top: 11px;
-    left:16px;
-}
-.icon-form-name:active {
-    fill: #4D5AE5;
-}
-.icon-form-tellemail{
-    position: absolute;
-    fill: #2E2F42;
-    top: 8px;
-    left:16px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-title-input:focus{
     outline: none;
-    border: 1px solid #4D5AE5;
+    border-color: #4D5AE5; 
 }
-.textarea{
-    color: rgba(46, 47, 66, 0.40);
-    font-family: Roboto;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.2;
-    letter-spacing: 0.04em;
-    height: 120px;
-    resize: none;
-    padding-top: 8px;
-    padding-left: 16px;
+.icon-form{
+    position: absolute;
+    fill: #2E2F42;
+    top: 50%;
+    transform: translateY(-50%);
+    left:16px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.form-lebel-checkbox{
+.icon-form:active {
+    fill: #4D5AE5;
+}
+.form-lebel-textarea{
+    margin-bottom: 16px;
     color: #8E8F99;
     font-size: 12px;
     line-height:1.7;
     letter-spacing: 0.04em;
-    padding: 12px 0 12px 0;
+
 }
-.formbtn{
+.input-textarea{
+    color: rgba(46, 47, 66, 0.4); 
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    height: 120px;
+    resize: none;
+    padding: 8px 16px;
+    width: 100%; 
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    border-radius: 4px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-textarea:focus{
+    border-color: #4D5AE5;
+}
+.form-lebel-checkbox{
+    margin-bottom: 20px;
+}
+.input-checkbox{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+    outline: 0;
+    outline-offset: 0;
+}
+.input-checkbox-lebel{
     display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color:#8e8f99;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-lebel-span{
+    width: 16px;
+    height: 16px; 
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    border-radius: 2px;
+    margin-right: 8px;
+}
+.form-lebel-link{
+    color:#4d5ae5; 
+    text-decoration: underline;
+}
+
+.formbtn{
+    display: block;
     padding: 16px 32px;
     align-items: center;
     justify-content: center;
     gap: 10px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     border-radius: 4px;
-    background: #4D5AE5;
+    border: none; 
+    background-color: #4D5AE5;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: #FFF;
     font-size: 16px;
@@ -678,11 +756,14 @@ background: transparent;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-lebel-link{
-    color: #4D5AE5;
-    text-decoration-line: underline;
+.formbtn:hover{
+    background: #404BBF;
 }
+
 .popup-content-close{
     position: relative;
     display: flex;
@@ -691,30 +772,41 @@ background: transparent;
     margin-bottom: 20px;
 }
 .icon-close{
-    position: absolute;
-    top: 8px;
-    left: 8px;
-    fill: black;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-close:active{
     fill:#E7E9FC;
 }
-.popup-content-close::before{
-    content: "";
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+.content-close{
+    display: flex;
+    position: absolute; 
+    top: 24px;
+    left: 24px;
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    background-color: #E7E9FC;
-    border: 1px solid rgba(0, 0, 0, 0.10);
-    transition-property: background-color;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0; 
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.popup-content-close:active::before{
-    background-color:#404BBF;
+.content-close:hover,
+.content-close:focus{
+    background-color: #404bbf; 
+    border: none;
 }
-
+.icon-checket{
+fill: #FFF;
+background-color: #404bbf;
+}
+.form-lebel-span:checked {
+    background-color:#404bbf;
+    border: none;
+    fill:#F4F4FD;
+}
 
 
 
