--- a/css/styles.css
+++ b/css/styles.css
@@ -555,12 +555,13 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     color: #ffffff;
     min-width: 165px;
     height: 40px;
-    cursor: pointe;
+    cursor: pointer;
     border: none;
     border-radius: 4px;
 }
 .icon-list{
     fill: #FFF;
+    margin-left: 16px
 }
 
 
@@ -588,11 +589,48 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     width: 408px;
     min-height: 584px;
     background: #fcfcfc;
-    box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px 0, 0.2; 
+    box-shadow:(0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px; 
     
 }
+.popup-content-close{
+    position: relative;
+    display: flex;
+    justify-content: left;
+    flex-shrink: 0;
+    margin-bottom: 20px;
+}
+.icon-close{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-close:hover,
+.icon-close:focus{
+    fill: #ffffff;
+}
+.content-close{
+    display: flex;
+    position: absolute; 
+    top: 24px;
+    left: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0; 
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.content-close:hover,
+.content-close:focus{
+    background-color: #404bbf; 
+    border: none;
+}
+
 .popup-content{
     background-color: #fff;
     width: 408px;
@@ -611,19 +649,19 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     color: #2E2F42;
     margin-bottom: 16px;
 }
-.form-title-conteiner{
-    margin-bottom: 8px;
-}
+
 .form-title{
     display: flex;
     width: 360px;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
 }
+
+.form-title-lebel{
+    position: relative; 
+    }
 .form-lebel{
-    display: flex;
-    flex-direction: column;
+    display: block; 
     color:#8E8F99;
     font-size: 12px;
     font-weight: 400;
@@ -632,22 +670,12 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     margin-bottom: 4px;
     }
 
-.popup-title {
-    color: #2E2F42;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    margin-bottom: 20px;
+.form-title-input-content{
+    position: relative;
+    width: 100%;
     }
 
-    .form-title-input-name{
-    position: relative;
-    width: 360px;
-
-}
-.form-title-input{
+.form-title-input-name{
     width: 100%;
     height: 40px;
     flex-shrink: 0;
@@ -656,8 +684,9 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     padding-left: 38px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form-title-input:focus{
+    }
+
+.form-title-input-name:focus{
     outline: none;
     border-color: #4D5AE5; 
 }
@@ -673,13 +702,10 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     fill: #4D5AE5;
 }
 .form-lebel-textarea{
-    color: #8E8F99;
-    font-size: 12px;
-    line-height:1.7;
-    letter-spacing: 0.04em;
-    margin-bottom: 16px;
-
+    width: 100%;
+    margin-bottom: 16px 
 }
+
 .input-textarea{
     color: rgba(46, 47, 66, 0.4); 
     font-size: 12px;
@@ -699,7 +725,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     border-color: #4D5AE5;
 }
 .form-lebel-checkbox{
-    
+margin-bottom: 24px; 
 }
 .input-checkbox{
     position: absolute;
@@ -716,10 +742,6 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     outline-offset: 0;
 }
 .input-checkbox-lebel{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -727,6 +749,10 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-lebel-span{
+    fill: transparent;
+    justify-content: center;
+    align-items: center;
+    display: inline-flex; 
     width: 16px;
     height: 16px; 
     border: 1px solid rgba(46, 47, 66, 0.4); 
@@ -763,40 +789,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     background: #404BBF;
 }
 
-.popup-content-close{
-    position: relative;
-    display: flex;
-    justify-content: left;
-    flex-shrink: 0;
-    margin-bottom: 20px;
-}
-.icon-close{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-close:active{
-    fill:#E7E9FC;
-}
-.content-close{
-    display: flex;
-    position: absolute; 
-    top: 24px;
-    left: 24px;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 0; 
-    cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-.content-close:hover,
-.content-close:focus{
-    background-color: #404bbf; 
-    border: none;
-}
+
 .icon-checket{
 fill: #FFF;
 background-color: #404bbf;
