--- a/css/styles.css
+++ b/css/styles.css
@@ -571,12 +571,14 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
     position:fixed;
     top:0px;
     left:0px;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     background:rgba(46, 47, 66, 0.40);
+    opacity: 0;
+    visibility: hidden;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.is-open:target{
+.is-open{
     opacity: 1;
     visibility: visible;
 }
