--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,9 @@ img {
     max-width: 100%;
 }
 body {
-    margin: 0 auto;
-    width: 1440px;
     font-family: "Roboto", sans-serif;
-    color: #434455;
     font-size: 16px;
     background-color: #ffffff;
-    line-height: 1.5;
 }
 
 h1,
@@ -150,7 +146,7 @@ a {
 
 /*Банер*/
 .banner {
-    max-width: 1440px;
+   
     display: flex;
     padding: 188px 0;
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
@@ -574,15 +570,12 @@ a {
     width: 100%;
     height: 100%;
     background: rgba(46, 47, 66, 0.4);
-    opacity: 0;
-    visibility: hidden;
     transition:
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-open {
-    opacity: 1;
-    visibility: visible;
+    
 }
 
 .popup-body {
@@ -694,9 +687,7 @@ a {
     left: 16px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-title-input-name:focus + .icon-form {
-    fill: #4d5ae5;
-}
+
 .form-lebel-textarea {
     width: 100%;
     margin-bottom: 16px;
@@ -745,14 +736,13 @@ a {
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-:root {
-    --bg-color: #404bbf;
-    --icon-color: #f4f4fd;
+.popup-body .form-title-input-name:focus + svg {
+  fill: #4D5AE5;
 }
-.visually-hidden:checked + div label span.icon-checket {
-    background-color: var(--bg-color);
-    border: none;
-    fill: var(--icon-color);
+input[type="checkbox"]:checked + label span {
+  background-color: #404BBF;
+  border: none;
+  fill: #F4F4FD;
 }
 
 .form-lebel-link {
