--- a/css/styles.css
+++ b/css/styles.css
@@ -739,11 +739,17 @@ a {
 .popup-body .form-title-input-name:focus + svg {
     fill: #4d5ae5;
 }
+
 input[type="checkbox"]:checked + label span svg {
     background-color:#404BBF;
     border: none;
     fill:#F4F4FD;
 }
+input[type="checkbox"]:checked + .form-lebel-span{
+    background-color:#404BBF;
+    border: none;
+    fill:#F4F4FD;
+    }
 .icon-checket{
     width: 16px;
     height: 16px;
